--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^2.32.0
+  firebase_auth: ^4.16.0
+  google_sign_in: ^7.2.0
+  flutter_signin_button: ^2.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -55,7 +59,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
