--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.6.0
   firebase_auth: ^5.5.0
+  cloud_firestore: ^5.4.4
+  firebase_storage: ^12.3.2
   dartz: ^0.10.1
   flutter_riverpod: ^2.6.1
   image_picker: ^1.1.2
