--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   permission_handler: ^11.3.1
   http: ^1.2.2
   flutter_dotenv: ^5.1.0
+  cloud_functions: ^5.1.5
 
 dev_dependencies:
   flutter_test:
