--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.5.0",
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
