--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   http: ^1.2.2
   flutter_dotenv: ^5.1.0
   cloud_functions: ^5.1.5
+  local_auth: ^2.3.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
