--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cloud_functions: ^5.1.5
   local_auth: ^2.3.0
   shared_preferences: ^2.3.2
+  crypto: ^3.0.5
 
 dev_dependencies:
   flutter_test:
